--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">lina_dicto_for_android</string>
+    <string name="app_name">lina_dicto english for android</string>
 </resources>
